Update various validations to work with Kafka Node Pools (#8785)
Signed-off-by: Jakub Scholz <www@scholzj.com>